# Desktop_Calendar

./: A.qml  Actions.qml  CMakeLists.txt  Content.qml  Content1.qml  CusDragRect.qml  CustomDesktopTip.qml  DatePicker.qml  DateTimePicker.qml  DesktopButton.qml  Desktop_Calendar.desktop  Desktop_Calendar.js  Dialogs.qml  Main.qml  MouseTracker.cpp  MouseTracker.h  MyCalendar.qml  MyCalendar_BACKUP_10893.qml  MyCalendar_REMOTE_10893.qml  Note.qml  NoteWindow.qml  README.md  Screenshot.qml  ScreenshotHelper.cpp  ScreenshotHelper.h  StickyNote.qml  TextContent.qml  TimePicker.qml  Window.qml  filemanager.cpp  filemanager.h  main.cpp  newWindow.qml
Screenshot/: 1111
schedule/2024-06-24/: 00:00:00.txt
schedule/2024-06-25/: 00:00:00.txt  03:00:00.txt  10:00:00.txt
schedule/2024-06-26/: 12:00:00.txt
schedule/2024-06-27/: 00:00:00.txt  06:00:00.txt
schedule/2024-07-07/: 01:00:00.txt  04:00:00.txt
schedule/2024-07-08/: 01:00:00.txt  01:10:00.txt  01:25:00.txt  02:00:00.txt  03:00:00.txt  05:00:00.txt
schedule/2024-07-09/: 01:00:35.txt  01:04:00.txt
schedule/2024-07-10/: 00:00:00.txt  00:00:03.txt  00:01:00.txt
schedule/2024-07-11/: 00:00:00.txt  00:00:04.txt  00:03:00.txt  02:00:00.txt  04:00:00.txt  06:00:00.txt
schedule/2024-07-12/: 00:00:00.txt
schedule/2024-07-13/: 00:00:00.txt  00:00:04.txt  03:00:00.txt  04:00:00.txt
schedule/2024-07-14/: 00:00:00.txt
